--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
   <section id="contacto">
     <h2>Contacto</h2>
-    <p>¡Escríbenos por WhatsApp o visítanos en nuestra sede!</p>
+    <p>¡Escríbenos por WhatsApp o visítanos en nuestra sede del Centro Comercial Plaza de Los Andes, Local 041!</p>
     <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757607369/4d287414-0efc-4732-b3d5-e04077a29c0e_cd6gvd.jpg" alt="Contacto 1">
     <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757607369/a148d392-8c5d-45e2-a152-7eb15153bf8b_laspgv.jpg" alt="Contacto 2">
     
@@ -245,7 +245,7 @@
   </section>
 
   <footer>
-    © 2025 Electro Mundial - Todos los derechos reservados
+    © 2025 Electro Mundial - Todos los derechos reservados - Diseño: EBS Makind
   </footer>
 
   <!-- Botón WhatsApp -->
@@ -260,3 +260,4 @@
 
 </body>
 </html>
+
