--- a/index.html
+++ b/index.html
@@ -245,8 +245,12 @@
   </section>
 
   <footer>
-    © 2025 Electro Mundial - Todos los derechos reservados - Diseño: EBS Makind
-  </footer>
+    <p>© 2025 Electro Mundial - Todos los derechos reservados - 
+       Diseño: <a href="https://wa.link/93unkg" target="_blank" style="color: yellow; text-decoration: underline;">
+       EBS Making</a>
+    </p>
+</footer>
+
 
   <!-- Botón WhatsApp -->
   <a href="https://wa.me/573192323728" target="_blank">
@@ -260,4 +264,5 @@
 
 </body>
 </html>
+
 
