--- a/index.html
+++ b/index.html
@@ -323,18 +323,20 @@ footer {
     </p>
 </footer>
 
-  <!-- Botón Llamada -->
-  <a href="tel:+573192323728" class="call-btn">
-    <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Llamar">
-  </a>
-<!-- === BOTONES FLOTANTES === -->
-<div class="float-buttons">
-  <a href="tel:+573192323728" target="_blank" class="call-button">📞</a>
-  <a href="https://wa.me/573192323728" target="_blank" class="whatsapp-button">💬</a>
-</div>
+  <!-- Botón WhatsApp -->
+<a href="https://wa.me/573192323728" target="_blank" class="float-btn whatsapp">
+  <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+</a>
+
+<!-- Botón Llamada -->
+<a href="tel:+573192323728" class="float-btn call">
+  <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Llamar">
+</a>
+
 
 </body>
 </html>
+
 
 
 
