--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Electro Mundial - Tarjeta Digital</title>
  7   <style>
-8     body {
-9       margin: 0;
-10      font-family: Arial, sans-serif;
-11      background-color: #000;
-12      color: #fff;
-13      text-align: center;
-14    }
+body {
+  margin: 0;
+  font-family: Arial, sans-serif;
+  background-color: #000; /* fondo negro */
+  color: #fff;            /* texto blanco */
+  text-align: center;
+}
+
 
 
     header {
@@ -192,29 +193,42 @@ footer {
   gap: 10px;
   z-index: 1000;
 }
-/* === BOTONES FLOTANTES === */
-.float-btn {
+.float-buttons {
   position: fixed;
   bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  z-index: 1000;
+}
+
+.float-buttons a {
   width: 55px;
   height: 55px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 28px;
+  color: white;
+  text-decoration: none;
   box-shadow: 0 4px 8px rgba(0,0,0,0.3);
   transition: transform 0.2s ease;
-  z-index: 1000;
 }
 
-.float-btn img {
-  width: 28px;
-  height: 28px;
-}
-
-.float-btn:hover {
+.float-buttons a:hover {
   transform: scale(1.1);
 }
+
+.whatsapp-button {
+  background: #25d366; /* verde WhatsApp */
+}
+
+.call-button {
+  background: #007bff; /* azul llamada */
+}
+
 
 /* Botón de llamada (azul) */
 .float-btn.call {
@@ -373,6 +387,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
