--- a/index.html
+++ b/index.html
@@ -218,11 +218,21 @@ footer {
   transition: transform 0.2s ease;
 }
 
-.float-buttons a:hover {
-  transform: scale(1.1);
+.botones flotantes a {
+  width: 40px;   /* ancho más pequeño */
+  height: 40px;  /* alto más pequeño */
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;  /* tamaño del ícono dentro */
+  color: white;
+  text-decoration: none;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+  transition: transform 0.2s ease;
 }
 
-.whatsapp-button {
+
   background: #25d366; /* verde WhatsApp */
 }
 
@@ -388,6 +398,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
