--- a/index.html
+++ b/index.html
@@ -219,13 +219,13 @@ footer {
 }
 
 .botones flotantes a {
-  width: 40px;   /* ancho más pequeño */
-  height: 40px;  /* alto más pequeño */
+  width: 50px;   /* tamaño del círculo */
+  height: 50px;
   border-radius: 50%;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 18px;  /* tamaño del ícono dentro */
+  font-size: 24px;  /* tamaño del ícono dentro */
   color: white;
   text-decoration: none;
   box-shadow: 0 4px 8px rgba(0,0,0,0.3);
@@ -398,6 +398,7 @@ footer {
 
 </body>
 </html>
+
 
 
 
