--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
       <nav>
         <a href="#inicio">Inicio</a>
         <a href="#contacto">Contacto</a>
+<li><a href="#escanear">Escanéame</a></li>
         <a href="#ingresos">Generador de Ingresos</a>
       </nav>
 
@@ -237,6 +238,15 @@
     </div>
   </section>
 
+<!-- 🔹 NUEVA SECCIÓN QR -->
+<section id="escanear" style="text-align: center; padding: 50px 20px; background-color: #111; color: white;">
+  <h2 style="color: yellow;">📲 Escanéame</h2>
+  <p>Escanea este código QR para acceder rápidamente a nuestra información.</p>
+  <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757624631/LOGO_DE_emb_g60_emb_2_ao5v0a.png" 
+       alt="Código QR Electro Mundial" 
+       style="width: 250px; max-width: 100%; margin-top: 20px; border: 5px solid white; border-radius: 15px;">
+</section>
+
   <!-- ===== generador de ingresos ===== -->
   <section id="ingresos">
     <h2 style="color:var(--gold);">Generador de Ingresos</h2>
@@ -275,3 +285,4 @@
   </script>
 </body>
 </html>
+
