--- a/index.html
+++ b/index.html
@@ -1,288 +1,310 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Electro Mundial - Tarjeta Digital</title>
-
   <style>
-    /* ===== global ===== */
-    :root{
-      --bg: #000;
-      --card: #111;
-      --gold: #FFD700;
-      --white: #fff;
-      --whatsapp: #25d366;
-      --call: #007bff;
-    }
-    html,body {height:100%;}
     body {
-      margin:0;
-      font-family: Arial, Helvetica, sans-serif;
-      background: var(--bg);
-      color: var(--white);
+      margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #000;
+      color: #fff;
       text-align: center;
-      -webkit-font-smoothing:antialiased;
     }
 
-    /* ===== header ===== */
-    header{
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      padding:14px 28px;
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 15px 30px;
       background: #000;
     }
-    header img.logo-h {
-      height:60px;
-      display:block;
+
+    header img {
+      height: 60px;
     }
 
-    nav{
-      display:flex;
-      gap:18px;
-      align-items:center;
-    }
-    nav a{
-      color:var(--white);
-      text-decoration:none;
-      font-weight:700;
-    }
-    nav a:hover{ color: var(--gold); }
-
-    /* hamburger */
-    .menu-toggle{ display:none; cursor:pointer; }
-    .menu-toggle div{ width:24px; height:3px; background:#fff; margin:4px 0; border-radius:2px; }
-
-    @media(max-width:768px){
-      nav{ display:none; position:absolute; top:70px; right:12px; background:#111; padding:10px; border-radius:8px; flex-direction:column; }
-      nav.show{ display:flex; }
-      .menu-toggle{ display:flex; flex-direction:column; }
+    nav {
+      display: flex;
+      gap: 20px;
     }
 
-    /* ===== tarjeta (card) ===== */
-    .card{
-      margin:40px auto;
-      max-width:420px;
-      background: var(--card);
-      border-radius:16px;
-      padding:26px;
-      border: 2px solid var(--gold);
-      box-shadow: 0 0 30px rgba(255,215,0,0.12);
-    }
-    .card img.logo-round{ width:150px; height:150px; border-radius:50%; object-fit:cover; display:block; margin:0 auto 14px; }
-
-    .card h2{ color:var(--gold); margin:6px 0 8px; }
-    .card p { margin:6px 0; color:#ddd; }
-
-    .contact-info p{ margin:8px 0; }
-    .contact-info .phones{ color: #37ff52; font-weight:700; } /* verde para los teléfonos */
-    .contact-info .addr{ color: #ff3b3b; font-weight:700; } /* rojo para dirección */
-
-    /* ===== Misión / Visión / Valores ===== */
-    section.mvv{ padding:24px 20px 60px; }
-    .mvv { display:grid; gap:20px; grid-template-columns: repeat(auto-fit,minmax(240px,1fr)); max-width:1000px; margin:20px auto; }
-    .mvv .box{ background: var(--card); padding:18px; border-radius:10px; border:1px solid var(--gold); box-shadow:0 0 10px rgba(255,215,0,0.08); }
-    .mvv h3{ color:var(--gold); margin-top:0; }
-
-    /* ===== Secciones de contacto / imagenes ===== */
-    section img.responsive { max-width:90%; border-radius:10px; margin:12px 0; display:block; margin-left:auto; margin-right:auto; }
-
-    /* ===== Botón principal (registro) ===== */
-    .btn {
-      display:inline-block;
-      margin:20px auto;
-      padding:10px 18px;
-      border-radius:10px;
-      background:var(--gold);
-      color:#000;
-      font-weight:700;
-      text-decoration:none;
-    }
-    .btn:hover{ background:#ffb400; }
-
-    /* ===== Footer ===== */
-    footer{
-      padding:16px 12px 90px; /* espacio inferior para botones flotantes */
-      background:transparent;
-      color:var(--gold);
-      font-size:14px;
-    }
-    footer a{ color:var(--gold); text-decoration:underline; }
-
-    /* ===== BOTONES FLOTANTES (SOLUCIÓN) =====
-       - Usamos una sola estructura: .float-buttons (contenedor) y .float-btn (cada botón).
-       - Eliminamos clases conflictivas como "call-btn" que causaban que un <a> tuviera width:100%
-    */
-    .float-buttons{
-      position:fixed;
-      right:20px;
-      bottom:20px;
-      display:flex;
-      flex-direction:column;
-      gap:12px;
-      z-index:1200;
-      align-items:flex-end; /* para que los botones queden alineados a la derecha */
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-weight: bold;
     }
 
-    .float-btn{
-      width:55px;
-      height:55px;
-      border-radius:50%;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      box-shadow: 0 6px 14px rgba(0,0,0,0.35);
-      transition: transform .16s ease;
-      text-decoration:none;
-      color:#fff;
-      position:relative;
-      overflow:hidden;
+    nav a:hover {
+      color: #FFD700;
     }
 
-    /* aseguramos que la imagen dentro no se haga gigante */
-    .float-btn img{
-      width:60%;
-      height:60%;
-      object-fit:contain;
-      display:block;
+    /* Menú responsive */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
     }
 
-    .float-btn.call{ background: var(--call); }
-    .float-btn.whatsapp{ background: var(--whatsapp); }
+    .menu-toggle div {
+      width: 25px;
+      height: 3px;
+      background: white;
+      margin: 4px;
+    }
 
-    .float-btn:hover{ transform: translateY(-4px) scale(1.05); }
-
-    /* responsive: en móvil colocamos los botones en fila centrados */
-    @media(max-width:600px){
-      .float-buttons{
-        right:50%;
-        transform:translateX(50%);
-        flex-direction:row;
-        bottom:16px;
+    @media (max-width: 768px) {
+      nav {
+        display: none;
+        flex-direction: column;
+        background: #111;
+        position: absolute;
+        top: 70px;
+        right: 10px;
+        padding: 10px;
+        border-radius: 10px;
       }
-      .float-btn{ width:46px; height:46px; }
-      .float-btn img{ width:60%; height:60%; }
+      nav.show {
+        display: flex;
+      }
+      .menu-toggle {
+        display: flex;
+      }
     }
 
-    /* pequeño ajuste visual para evitar que iframes rompan layout */
-    .map-wrapper iframe{ width:100%; border:0; border-radius:10px; display:block; }
+    .card {
+      margin: 40px auto;
+      padding: 20px;
+      max-width: 400px;
+      background: #111;
+      border: 2px solid #FFD700;
+      border-radius: 15px;
+      box-shadow: 0 0 20px #FFD700;
+    }
 
+    .card img {
+      width: 150px;
+      border-radius: 50%;
+    }
+
+    .contact-info {
+      margin-top: 15px;
+    }
+
+    .contact-info p {
+      margin: 8px 0;
+    }
+
+    /* === Footer con espacio extra para no ser tapado === */
+    footer {
+      background: black;
+      color: yellow;
+      text-align: center;
+      padding: 15px 10px;
+      padding-bottom: 80px;
+      font-size: 14px;
+    }
+
+    /* === Botones flotantes === */
+    .float-buttons {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      display: flex;
+      flex-direction: column;
+      gap: 15px;
+      z-index: 1000;
+    }
+
+    .float-buttons a {
+      width: 55px;
+      height: 55px;
+      border-radius: 50%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 22px;
+      color: white;
+      text-decoration: none;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.3);
+      transition: transform 0.2s ease;
+    }
+
+    .float-buttons a:hover {
+      transform: scale(1.1);
+    }
+
+    .float-btn.whatsapp {
+      background-color: #25d366;
+    }
+
+    .float-btn.call {
+      background-color: #007bff;
+    }
+
+    /* Animación rebote */
+    @keyframes bounceIn {
+      0%   { transform: scale(0.3); opacity: 0; }
+      50%  { transform: scale(1.1); opacity: 1; }
+      70%  { transform: scale(0.9); }
+      100% { transform: scale(1); }
+    }
+
+    /* Vista en móvil */
+    @media (max-width: 600px) {
+      .float-buttons {
+        flex-direction: row;
+        bottom: 20px;
+        right: 50%;
+        transform: translateX(50%);
+        gap: 15px;
+      }
+
+      .float-buttons a {
+        width: 45px;
+        height: 45px;
+        font-size: 20px;
+        animation: bounceIn 0.6s ease;
+      }
+    }
+
+    section {
+      padding: 50px 20px;
+    }
+
+    section img {
+      max-width: 90%;
+      border-radius: 10px;
+      margin: 15px 0;
+    }
+
+    .mvv {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .mvv div {
+      background: #111;
+      padding: 20px;
+      border-radius: 10px;
+      border: 1px solid #FFD700;
+      box-shadow: 0 0 10px #FFD70033;
+    }
+
+    .mvv h3 {
+      color: #FFD700;
+      margin-bottom: 10px;
+    }
+
+    .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #FFD700;
+      color: #000;
+      font-weight: bold;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
+
+    .btn:hover {
+      background: #ffae00;
+    }
   </style>
 </head>
 <body>
 
-  <!-- ===== header ===== -->
   <header>
-    <!-- tu logo horizontal (mantuve la URL que me diste) -->
-    <img class="logo-h" src="https://res.cloudinary.com/dysydffc7/image/upload/v1757605752/LOGO_DE_innovatech_g57_emb_2_ttvosg.png" alt="Electro Mundial - Logo">
-
-    <div style="display:flex; align-items:center; gap:18px;">
-      <nav>
-        <a href="#inicio">Inicio</a>
-        <a href="#contacto">Contacto</a>
-        <a href="#ingresos">Generador de Ingresos</a>
-      </nav>
-
-      <!-- hamburger para móvil (mantengo sencillo, no altera desktop) -->
-      <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('show')" aria-hidden="true">
-        <div></div><div></div><div></div>
-      </div>
+    <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757605752/LOGO_DE_innovatech_g57_emb_2_ttvosg.png" alt="Logo Horizontal Electro Mundial">
+    
+    <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('show')">
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
+    <nav>
+      <a href="#inicio">Inicio</a>
+      <a href="#contacto">Contacto</a>
+      <a href="#escanear">Escanéame</a>
+      <a href="#ingresos">Generador de Ingresos</a>
+    </nav>
   </header>
 
-  <!-- ===== inicio / tarjeta ===== -->
   <section id="inicio">
     <div class="card">
-      <!-- Logo redondo con círculo dorado que querías -->
-      <img class="logo-round" src="https://res.cloudinary.com/dysydffc7/image/upload/v1757606882/LOGO_DE_emb_g58_emb_2_rymqbj.png" alt="Logo Electro Mundial">
-
-      <h2>Electro Mundial</h2>
-      <p style="color:#ddd; margin-top:6px;">Distribuidor Autorizado</p>
-
+      <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757606882/LOGO_DE_emb_g58_emb_2_rymqbj.png" alt="Logo Redondo Electro Mundial">
+      <h2 style="color:#FFD700;">Electro Mundial</h2>
+      <p>Distribuidor Autorizado</p>
       <div class="contact-info">
-        <p>📞 <span class="phones">319 232 3728 / 320 998 9888</span></p>
-        <p>📍 <span class="addr">C.C. Plaza de Los Andes, Local 041<br>Calle 9 N° 6-43, Cúcuta - Colombia</span></p>
+        <p>📞 <span style="color:lime;">319 232 3728 / 320 998 9888</span></p>
+        <p>📍 <span style="color:red;">C.C. Plaza de Los Andes, Local 041<br>Calle 9 N° 6-43, Cúcuta - Colombia</span></p>
       </div>
     </div>
 
-    <h2 style="color:var(--gold); margin-top:40px;">Misión, Visión y Valores</h2>
-    <div class="mvv" aria-labelledby="mvv">
-      <div class="box">
+    <h2 style="color:#FFD700; margin-top:40px;">Misión, Visión y Valores</h2>
+    <div class="mvv">
+      <div>
         <h3>Misión</h3>
-        <p>Brindar soluciones tecnológicas, eléctricas y accesorios para celulares de alta calidad, mejorando la vida diaria de nuestros clientes mediante productos confiables y accesibles.</p>
+        <p>Brindar soluciones tecnológicas, eléctricas y accesorios para celulares de alta calidad.</p>
       </div>
-      <div class="box">
+      <div>
         <h3>Visión</h3>
-        <p>Ser líderes en la región como la tienda de referencia en innovación tecnológica y productos eléctricos, expandiendo nuestra presencia en Colombia y ofreciendo siempre lo mejor en servicio y variedad.</p>
+        <p>Ser líderes en la región como la tienda de referencia en innovación tecnológica.</p>
       </div>
-      <div class="box">
+      <div>
         <h3>Valores</h3>
         <p>✅ Calidad en cada producto<br>✅ Confianza y responsabilidad<br>✅ Atención cercana al cliente<br>✅ Innovación constante</p>
       </div>
     </div>
   </section>
 
-  <!-- ===== contacto ===== -->
   <section id="contacto">
-    <h2 style="color:var(--gold);">Contacto</h2>
-    <p>¡Escríbenos por WhatsApp o visítanos en nuestra sede del Centro Comercial Plaza de Los Andes, Local 041!</p>
-
-    <img class="responsive" src="https://res.cloudinary.com/dysydffc7/image/upload/v1757607369/4d287414-0efc-4732-b3d5-e04077a29c0e_cd6gvd.jpg" alt="Imagen contacto 1">
-    <img class="responsive" src="https://res.cloudinary.com/dysydffc7/image/upload/v1757607369/a148d392-8c5d-45e2-a152-7eb15153bf8b_laspgv.jpg" alt="Imagen contacto 2">
-
-    <div class="map-wrapper" style="max-width:1000px;margin:18px auto;">
-      <!-- tu embed de Google Maps (mantuve el mismo lugar aunque con versión abreviada) -->
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.854585171168!2d-72.50782032604198!3d7.894245506077092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e664511f8b69b63%3A0xb437e1a61cf8b8c!2sPlaza%20de%20Los%20Andes!5e0!3m2!1ses!2sco!4v1694200000000!5m2!1ses!2sco" width="100%" height="300" style="border:0; border-radius:10px;" allowfullscreen="" loading="lazy"></iframe>
+    <h2>Contacto</h2>
+    <p>¡Escríbenos por WhatsApp o visítanos en nuestra sede del C.C. Plaza de Los Andes!</p>
+    <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757607369/4d287414-0efc-4732-b3d5-e04077a29c0e_cd6gvd.jpg" alt="Contacto 1">
+    <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757607369/a148d392-8c5d-45e2-a152-7eb15153bf8b_laspgv.jpg" alt="Contacto 2">
+    
+    <div style="margin-top:20px;">
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3976.854585171168!2d-72.50782032604198!3d7.894245506077092!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8e664511f8b69b63%3A0xb437e1a61cf8b8c!2sPlaza%20de%20Los%20Andes!5e0!3m2!1ses!2sco!4v1694200000000!5m2!1ses!2sco" 
+        width="100%" height="300" style="border:0; border-radius:10px;" allowfullscreen="" loading="lazy">
+      </iframe>
     </div>
   </section>
 
-<!-- 🔹 NUEVA SECCIÓN QR -->
-<section id="escanear" style="text-align: center; padding: 50px 20px; background-color: #111; color: white;">
-  <h2 style="color: yellow;">📲 Escanéame</h2>
-  <p>Escanea este código QR para acceder rápidamente a nuestra información.</p>
-  <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757624631/LOGO_DE_emb_g60_emb_2_ao5v0a.png" 
-       alt="Código QR Electro Mundial" 
-       style="width: 250px; max-width: 100%; margin-top: 20px; border: 5px solid white; border-radius: 15px;">
-</section>
-
-  <!-- ===== generador de ingresos ===== -->
-  <section id="ingresos">
-    <h2 style="color:var(--gold);">Generador de Ingresos</h2>
-    <img class="responsive" src="https://res.cloudinary.com/dysydffc7/image/upload/v1755564408/P-6_w7edxu.png" alt="Generador de Ingresos">
-    <br>
-    <a class="btn" href="https://www.emprendeworld.com/websignup?ref=16951247" target="_blank" rel="noopener">🔗 Regístrate aquí</a>
+  <section id="escanear">
+    <h2>Escanéame</h2>
+    <p>Escanea este código QR para acceder rápidamente a nuestra tarjeta digital:</p>
+    <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757624631/LOGO_DE_emb_g60_emb_2_ao5v0a.png" alt="Código QR" style="max-width:200px; margin-top:15px;">
   </section>
 
-  <!-- ===== footer ===== -->
+  <section id="ingresos">
+    <h2>Generador de Ingresos</h2>
+    <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1755564408/P-6_w7edxu.png" alt="Generador de Ingresos">
+    <br>
+    <a href="https://www.emprendeworld.com/websignup?ref=16951247" target="_blank" class="btn">🔗 Regístrate aquí</a>
+  </section>
+
   <footer>
-    <p>© 2025 Electro Mundial - Todos los derechos reservados - Diseño: 
-      <a href="https://wa.link/93unkg" target="_blank" rel="noopener">EBS Making</a>
+    <p>© 2025 Electro Mundial - Todos los derechos reservados - 
+       Diseño: <a href="https://wa.link/93unkg" target="_blank" style="color: yellow; text-decoration: underline;">
+       EBS Making</a>
     </p>
   </footer>
 
-  <!-- ===== BOTONES FLOTANTES (CORREGIDOS) =====
-        - Solo estos dos botones: Llamada y WhatsApp
-        - Las imágenes internas están forzadas a 60% del botón para evitar que se agranden.
-  -->
-  <div class="float-buttons" aria-hidden="false">
-    <a class="float-btn call" href="tel:+573192323728" title="Llamar">
-      <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Llamar">
+  <!-- === BOTONES FLOTANTES === -->
+  <div class="float-buttons">
+    <a href="tel:+573192323728" class="float-btn call" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png" alt="Llamar" style="width:60%;">
     </a>
-
-    <a class="float-btn whatsapp" href="https://wa.me/573192323728" target="_blank" rel="noopener" title="WhatsApp">
-      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    <a href="https://wa.me/573192323728" class="float-btn whatsapp" target="_blank">
+      <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" style="width:60%;">
     </a>
   </div>
 
-  <!-- ===== script mínimo para menú móvil (no toca nada más) ===== -->
-  <script>
-    // toggle nav en móvil (mantengo tu comportamiento)
-    document.querySelector('.menu-toggle')?.addEventListener('click', function(){
-      document.querySelector('nav')?.classList.toggle('show');
-    });
-  </script>
 </body>
 </html>
-
-
