--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
       padding: 20px;
       max-width: 400px;
       background: #111;
-      border: 2px solid #FFD700;
+      border: 2px solid #25d366; /* VERDE */
       border-radius: 15px;
-      box-shadow: 0 0 20px #FFD700;
+      box-shadow: 0 0 20px #25d366; /* VERDE */
     }
 
     .card img {
@@ -219,7 +219,7 @@
 <body>
 
   <header>
-    <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757605752/LOGO_DE_innovatech_g57_emb_2_ttvosg.png" alt="Logo Horizontal Electro Mundial">
+    <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1758824838/LOGO_g5_A2_rmynyu.png" alt="Logo Horizontal Electro Mundial">
     
     <div class="menu-toggle" onclick="document.querySelector('nav').classList.toggle('show')">
       <div></div>
@@ -236,7 +236,7 @@
 
   <section id="inicio">
     <div class="card">
-      <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1757606882/LOGO_DE_emb_g58_emb_2_rymqbj.png" alt="Logo Redondo Electro Mundial">
+      <img src="https://res.cloudinary.com/dysydffc7/image/upload/v1758824838/LISTA_g6_A1_lfp3hu.png" alt="Logo Redondo Electro Mundial">
       <h2 style="color:#FFD700;">Electro Mundial</h2>
       <p>Distribuidor Autorizado</p>
       <div class="contact-info">
@@ -308,4 +308,5 @@
 
 </body>
 </html>
+
 
