--- a/index.html
+++ b/index.html
@@ -136,11 +136,11 @@
     }
 
     .float-btn.whatsapp {
-      background-color: #25d366;
+      background-color: #25d366; /* VERDE */
     }
 
     .float-btn.call {
-      background-color: #007bff;
+      background-color: #25d366; /* VERDE */
     }
 
     /* Animación rebote */
@@ -190,12 +190,12 @@
       background: #111;
       padding: 20px;
       border-radius: 10px;
-      border: 1px solid #FFD700;
-      box-shadow: 0 0 10px #FFD70033;
+      border: 1px solid #25d366; /* VERDE */
+      box-shadow: 0 0 10px #25d366; /* VERDE */
     }
 
     .mvv h3 {
-      color: #FFD700;
+      color: #25d366; /* VERDE */
       margin-bottom: 10px;
     }
 
@@ -245,7 +245,7 @@
       </div>
     </div>
 
-    <h2 style="color:#FFD700; margin-top:40px;">Misión, Visión y Valores</h2>
+    <h2 style="color:#25d366; /* VERDE */ margin-top:40px;">Misión, Visión y Valores</h2>
     <div class="mvv">
       <div>
         <h3>Misión</h3>
@@ -308,5 +308,6 @@
 
 </body>
 </html>
+
 
 
