--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
 
   <footer>
     <p>© 2025 Electro Mundial - Todos los derechos reservados - 
-       Diseño: <a href="https://wa.link/93unkg" target="_blank" style="color: yellow; text-decoration: underline;">
+       Diseño: <a href="https://wa.link/93unkg" target="_blank" style="color: #25d366; /* VERDE */ text-decoration: underline;">
        EBS Making</a>
     </p>
   </footer>
@@ -308,6 +308,7 @@
 
 </body>
 </html>
+
 
 
 
