--- a/index.html
+++ b/index.html
@@ -201,19 +201,21 @@
 
     .btn {
       display: inline-block;
-      margin-top: 15px;
-      padding: 10px 20px;
-      background: #FFD700;
-      color: #000;
-      font-weight: bold;
-      border-radius: 8px;
-      text-decoration: none;
-      transition: 0.3s;
-    }
+      .btn {
+      display: inline-block;
+      margin-top: 15px;
+      padding: 10px 20px;
+      background: #25d366; /* VERDE */
+      color: #000;
+      font-weight: bold;
+      border-radius: 8px;
+      text-decoration: none;
+      transition: 0.3s;
+    }
 
-    .btn:hover {
-      background: #ffae00;
-    }
+    .btn:hover {
+      background: #1fae50; /* Un verde un poco más oscuro para cuando pasas el mouse */
+    }
   </style>
 </head>
 <body>
@@ -308,6 +310,7 @@
 
 </body>
 </html>
+
 
 
 
